--- a/docs/User Guide/Theorists/BSR/exp_learning.ipynb
+++ b/docs/User Guide/Theorists/BSR/exp_learning.ipynb
@@ -19,54 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: autora in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (0.0.0)\r\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.64.0 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (4.65.0)\r\n",
-      "Requirement already satisfied: numpy>=1.22.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (1.24.2)\r\n",
-      "Requirement already satisfied: torch==2.0.0 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (2.0.0)\r\n",
-      "Requirement already satisfied: sympy<2.0.0,>=1.10.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (1.11.1)\r\n",
-      "Requirement already satisfied: matplotlib<4.0.0,>=3.2.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (3.7.1)\r\n",
-      "Requirement already satisfied: graphviz<0.21.0,>=0.14.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (0.20.1)\r\n",
-      "Requirement already satisfied: pandas<3.0.0,>=1.4.2 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (2.0.0)\r\n",
-      "Requirement already satisfied: scikit-learn<2.0.0,>=1.1.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (1.2.2)\r\n",
-      "Requirement already satisfied: seaborn<0.13.0,>=0.11.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (0.12.2)\r\n",
-      "Requirement already satisfied: scipy<2.0.0,>=1.9.3 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (1.10.1)\r\n",
-      "Requirement already satisfied: imageio<3.0.0,>=2.9.0 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from autora) (2.27.0)\r\n",
-      "Requirement already satisfied: typing-extensions in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from torch==2.0.0->autora) (4.5.0)\r\n",
-      "Requirement already satisfied: networkx in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from torch==2.0.0->autora) (3.1)\r\n",
-      "Requirement already satisfied: filelock in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from torch==2.0.0->autora) (3.10.7)\r\n",
-      "Requirement already satisfied: jinja2 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from torch==2.0.0->autora) (3.1.2)\r\n",
-      "Requirement already satisfied: pillow>=8.3.2 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from imageio<3.0.0,>=2.9.0->autora) (9.5.0)\r\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.2.1->autora) (1.0.7)\r\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.2.1->autora) (3.0.9)\r\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.2.1->autora) (5.12.0)\r\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.2.1->autora) (4.39.3)\r\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.2.1->autora) (0.11.0)\r\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.2.1->autora) (1.4.4)\r\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.2.1->autora) (23.0)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from matplotlib<4.0.0,>=3.2.1->autora) (2.8.2)\r\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from pandas<3.0.0,>=1.4.2->autora) (2023.3)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from pandas<3.0.0,>=1.4.2->autora) (2023.3)\r\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from scikit-learn<2.0.0,>=1.1.1->autora) (3.1.0)\r\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from scikit-learn<2.0.0,>=1.1.1->autora) (1.2.0)\r\n",
-      "Requirement already satisfied: mpmath>=0.19 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from sympy<2.0.0,>=1.10.1->autora) (1.3.0)\r\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from importlib-resources>=3.2.0->matplotlib<4.0.0,>=3.2.1->autora) (3.15.0)\r\n",
-      "Requirement already satisfied: six>=1.5 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib<4.0.0,>=3.2.1->autora) (1.16.0)\r\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/benwandrew/Library/Caches/pypoetry/virtualenvs/autora--WSX6yBF-py3.8/lib/python3.8/site-packages (from jinja2->torch==2.0.0->autora) (2.1.2)\r\n",
-      "\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip available: \u001B[0m\u001B[31;49m22.3.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m23.1\u001B[0m\r\n",
-      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\r\n"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [
-    "!pip install autora\n",
-    "\n",
     "import numpy as np\n",
     "from autora.variable import DV, IV, ValueType, VariableCollection\n",
     "from autora.skl.bsr import BSRRegressor"
@@ -88,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# general meta parameters\n",
@@ -109,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# exponential learning curve parameters\n",
@@ -136,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def exp_learning_metadata():\n",
@@ -194,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def exp_learning_experiment(X: np.ndarray,\n",
@@ -226,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def exp_learning_data(metadata):\n",
@@ -254,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "X, y = exp_learning_data(exp_learning_metadata())"
@@ -286,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "bsr_estimator = BSRRegressor(\n",
@@ -311,32 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/benwandrew/Developer/autora/autora/theorist/bsr/funcs.py:128: RuntimeWarning: divide by zero encountered in log\n",
-      "  struct_ll += np.log(1 - 1 / np.power((1 + depth), -beta))\n",
-      "/Users/benwandrew/Developer/autora/autora/theorist/bsr/operation.py:27: RuntimeWarning: overflow encountered in exp\n",
-      "  return 1 / (cutoff + np.exp(-operand))\n",
-      "/Users/benwandrew/Developer/autora/autora/theorist/bsr/operation.py:51: RuntimeWarning: overflow encountered in power\n",
-      "  return np.power(operand, power)\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "BSRRegressor(itr_num=1000)",
-      "text/html": "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>BSRRegressor(itr_num=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">BSRRegressor</label><div class=\"sk-toggleable__content\"><pre>BSRRegressor(itr_num=1000)</pre></div></div></div></div></div>"
+      "text/plain": "0.0"
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bsr_estimator.fit(X,y)"
+    "np.log(1)"
    ],
    "metadata": {
     "collapsed": false
