fixed broken links in general theorist tutorial

--- a/docs/tutorials/theorist.ipynb
+++ b/docs/tutorials/theorist.ipynb
@@ -12,9 +12,9 @@
    "source": [
     "# Automated Theorist Tutorial\n",
     "\n",
-    "Theorists are classes designed to automate the construction of interpretable models from data. AutoRA theorists are implemented as sklearn regressors and can be used with the `fit` and `predict` methods.\n",
+    "[Theorists](../theorist/index.md) are classes designed to automate the construction of interpretable models from data. AutoRA theorists are implemented as sklearn regressors and can be used with the `fit` and `predict` methods.\n",
     "\n",
-    "![Theorist](docs/img/theorist.png)\n",
+    "![Theorist](../img/theorist.png)\n",
     "\n",
     "In order to use a theorist, you must first install the theorist package. Some theorists are installed by default when you install ``autora``. Once a theorist is installed, you can instantiate it and use it as you would any other sklearn regressor. That is, you can call the ``fit`` function of the theorist by passing in experimental conditions and corresponding observations, and then call the ``predict`` function to generate predictions for novel experimental conditions using the discovered model.\n",
     "\n",
