docs: couple language changes

--- a/docs/tutorials/theorist.ipynb
+++ b/docs/tutorials/theorist.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "![Theorist](../img/theorist.png)\n",
     "\n",
-    "In order to use a theorist, you must first install the theorist package. Some theorists are installed by default when you install ``autora``. Once a theorist is installed, you can instantiate it and use it as you would any other sklearn regressor. That is, you can call the ``fit`` function of the theorist by passing in experimental conditions and corresponding observations, and then call the ``predict`` function to generate predictions for novel experimental conditions using the discovered model.\n",
+    "In order to use a theorist, you must first install the corresponding theorist package. Some theorists are installed by default when you install ``autora``. Once a theorist is installed, you can instantiate it and use it as you would any other sklearn regressor. That is, you can call the ``fit`` function of the theorist by passing in experimental conditions and corresponding observations, and then call the ``predict`` function to generate predicted observations for novel experimental conditions using the discovered model.\n",
     "\n",
     "The following tutorial demonstrates how to use the `BMSRegressor` (Guimerà et al., 2020, in Sci. Adv.)–a theorist that can discover an intepretable equation relating the independent variables of an experiment (experiment conditions) to predicted dependent variables (observations)."
    ]
@@ -92,6 +92,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
@@ -100,7 +101,7 @@
     }
    },
    "source": [
-    "Then we set up the BMS regressor with our chosen meta-parameters. In this case, we will specify the number of `epochs` as well as temperatures (`ts`). Note, BMS also allows users to specify unique priors over the operations considered in the search space (`prior_par`), but in this simple example we will stick with those priors implemented by the original authors, Guimerà et al. (2020).\n"
+    "Then we set up the BMS regressor with our chosen meta parameters. In this case, we will specify the number of `epochs` as well as temperatures (`ts`). Note, BMS also allows users to specify unique priors over the operations considered in the search space (`prior_par`), but in this simple example we will stick with those priors implemented by the original authors, Guimerà et al. (2020).\n"
    ]
   },
   {
