docs: make heading a separate cell

--- a/docs/contribute/notebook.ipynb
+++ b/docs/contribute/notebook.ipynb
@@ -9,8 +9,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebooks\n",
-    "\n",
+    "# Notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "You can use [Jupyter Notebooks](https://jupyter.org) as part of the documentation for your contribution.\n",
     "\n",
     "## Including Images\n",
@@ -30,8 +34,11 @@
     "\n",
     "Then start editing the markdown cell, and at the position where you want the image, open the menu Edit > Insert Image:\n",
     "\n",
-    "![insert-image.png](attachment:insert-image.png)"
-   ]
+    "![insert-image.png](attachment:insert-image.png)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
