--- a/docs/tutorials/theorist.ipynb
+++ b/docs/tutorials/theorist.ipynb
@@ -4,10 +4,7 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "source": [
     "# Automated Theorist Tutorial\n",
@@ -18,7 +15,7 @@
     "\n",
     "In order to use a theorist, you must first install the corresponding theorist package. Some theorists are installed by default when you install ``autora``. Once a theorist is installed, you can instantiate it and use it as you would any other sklearn regressor. That is, you can call the ``fit`` function of the theorist by passing in experimental conditions and corresponding observations, and then call the ``predict`` function to generate predicted observations for novel experimental conditions using the discovered model.\n",
     "\n",
-    "The following tutorial demonstrates how to use the `BMSRegressor` (Guimerà et al., 2020, in Sci. Adv.)–a theorist that can discover an intepretable equation relating the independent variables of an experiment (experiment conditions) to predicted dependent variables (observations)."
+    "The following tutorial demonstrates how to use the `BMSRegressor` (Guimerà et al., 2020, in Sci. Adv.)–a theorist that can discover an interpretable equation relating the independent variables of an experiment (experiment conditions) to predicted dependent variables (observations)."
    ]
   },
   {
