style: conform naming of notebooks to Camel case with spaces

--- a/docs/contribute/Notebook.ipynb
+++ b/docs/contribute/Notebook.ipynb
@@ -13,7 +13,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "You can use [Jupyter Notebooks](https://jupyter.org) as part of the documentation for your contribution.\n",
     "\n",
@@ -27,18 +31,15 @@
     "\n",
     "To attach an image, you can open the notebook in the Jupyter notebook browser.\n",
     "\n",
-    "For example, to open the `docs/contribute/notebook.ipynb` file, you can run:\n",
+    "For example, to open the `docs/contribute/Notebook.ipynb` file, you can run:\n",
     "```shell\n",
-    "jupyter notebook \"docs/contribute/notebook.ipynb\"\n",
+    "jupyter notebook \"docs/contribute/Notebook.ipynb\"\n",
     "```\n",
     "\n",
     "Then start editing the markdown cell, and at the position where you want the image, open the menu Edit > Insert Image:\n",
     "\n",
     "![insert-image.png](attachment:insert-image.png)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
