docs: clean metadata

--- a/docs/contribute/Notebook.ipynb
+++ b/docs/contribute/Notebook.ipynb
@@ -15,9 +15,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "You can use [Jupyter Notebooks](https://jupyter.org) as part of the documentation for your contribution.\n",
     "\n",
@@ -57,8 +55,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
