docs: remove extra newline

--- a/docs/tutorials/Experimentalist.ipynb
+++ b/docs/tutorials/Experimentalist.ipynb
@@ -397,7 +397,7 @@
     "ax.scatter(new_conditions, np.zeros_like(new_conditions), c=\"b\", label=\"New Experimental Conditions\")\n",
     "ax.set_xlabel(\"X\")\n",
     "ax.set_ylabel(\"Y\")\n",
-    "ax.legend()\n"
+    "ax.legend()"
    ]
   },
   {
