style: strong title case globally (cont'd)

--- a/docs/tutorials/Experimentalist.ipynb
+++ b/docs/tutorials/Experimentalist.ipynb
@@ -9,7 +9,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Automated Experimentalist Tutorial\n",
+    "# Experimentalist Tutorial\n",
     "\n",
     "[Experimentalists](../experimentalist/index.md) are functions designed to return novel experimental conditions that yield scientific merit.\n",
     "\n",
@@ -65,10 +65,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1: Sampling fom a Sinus Function\n",
+    "## Example 1: Sampling From A Sine Function\n",
     "\n",
     "In this example, we will consider a dataset resembling the sine function. We will then fit a linear model to the data and use the falsification sampler to identify experiment conditions under which the model is predicted to perform the worst.\n",
     "\n",
@@ -242,10 +243,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2: Sampling from a Gaussian Mixture Model\n",
+    "## Example 2: Sampling From A Gaussian Mixture Model\n",
     "\n",
     "In this example, we will consider a dataset sampled from a Gaussian mixture model. We will fit a Gaussian mixture model to the data and use the falsification sampler to identify experiment conditions under which the model is predicted to perform the worst.\n",
     "\n",
@@ -528,10 +530,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2: Sampling from a Gaussian Mixture Model\n",
+    "## Example 2: Sampling From A Gaussian Mixture Model\n",
     "\n",
     "In this example, we will consider a dataset sampled from a Gaussian mixture model. We will fit a Gaussian mixture model to the data and use the falsification sampler to identify experiment conditions under which the model is predicted to perform the worst.\n",
     "\n",
