style: strong title case globally (cont'd)

--- a/docs/tutorials/Theorist.ipynb
+++ b/docs/tutorials/Theorist.ipynb
@@ -9,7 +9,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Automated Theorist Tutorial\n",
+    "# Theorist Tutorial\n",
     "\n",
     "[Theorists](../theorist/index.md) are classes designed to automate the construction of interpretable models from data. AutoRA theorists are implemented as sklearn regressors and can be used with the `fit` and `predict` methods.\n",
     "\n",
