--- a/docs/tutorials/Theorist.ipynb
+++ b/docs/tutorials/Theorist.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the following line when running on Google Colab\n",
-    "# !pip install autora[theorist-bms]"
+    "# !pip install \"autora[theorist-bms]\""
    ]
   },
   {
