docs: quick and dirty fix for broken links in jupiter notebook

--- a/docs/tutorials/Theorist.ipynb
+++ b/docs/tutorials/Theorist.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "# Theorist Tutorial\n",
     "\n",
-    "[Theorists](../theorist/index.md) are classes designed to automate the construction of interpretable models from data. AutoRA theorists are implemented as sklearn regressors and can be used with the `fit` and `predict` methods.\n",
+    "[Theorists](../../theorist) are classes designed to automate the construction of interpretable models from data. AutoRA theorists are implemented as sklearn regressors and can be used with the `fit` and `predict` methods.\n",
     "\n",
     "![Theorist](attachment:theorist.png)\n",
     "\n",
