--- a/docs/tutorials/Experimentalist.ipynb
+++ b/docs/tutorials/Experimentalist.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "# Experimentalist Tutorial\n",
     "\n",
-    "[Experimentalists](../../experimentalist/) are functions designed to return novel experimental conditions that yield scientific merit.\n",
+    "[Experimentalists](../experimentalist/index.md) are functions designed to return novel experimental conditions that yield scientific merit.\n",
     "\n",
     "![Experimentalist](attachment:experimentalist.png)\n",
     "\n",
