removed basic usage tutorial

--- a/docs/tutorials/Basic Usage.ipynb
+++ b/docs/tutorials/Basic Usage.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "## Overview\n",
     "\n",
-    "1. Installing ``autora``\n",
+    "1. Installation\n",
     "2. Automated Empirical Research Components\n",
     "    2.1. Experiment Runners\n",
     "    2.2. Theorists\n",
