--- a/docs/tutorials/Basic Tutorial/Tutorial-I-Components.ipynb
+++ b/docs/tutorials/Basic Tutorial/Tutorial-I-Components.ipynb
@@ -25,7 +25,7 @@
         "\n",
         "[AutoRA Basic Tutorial I: Components](www.addlink.com) <br>\n",
         "[AutoRA Basic Tutorial II: Loop Constructs](www.addlink.com) <br>\n",
-        "[AutoRA Basic Tutorial III: Workflow](www.addlink.com) <br>\n",
+        "[AutoRA Basic Tutorial III: Workflow Logic](www.addlink.com) <br>\n",
         "[AutoRA Basic Tutorial IV: Customization](www.addlink.com) <br>\n",
         "\n",
         "These notebooks provide a comprehensive introduction to the capabilities of ``autora``. **It demonstrates the fundamental components of ``autora``, and how they can be combined to facilitate automated (closed-loop) empirical research through synthetic experiments.**\n",
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "id": "2S9mfSxVUYM3"
       },
@@ -91,7 +91,7 @@
         "id": "tJNNbhskVMNq",
         "outputId": "a54371dd-79ab-4849-abdc-4862bd116e94"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,12 +177,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 507
+          "height": 508
         },
         "id": "8P3iMrqN-pOU",
         "outputId": "92dede11-65c8-423d-b8a5-ac0b6191404c"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "id": "DM9HkPNqUYM5"
       },
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "id": "cjnQjoANUYM6"
       },
@@ -328,11 +328,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 489
+          "height": 490
         },
         "id": "epUuwg8rUYM6",
         "outputId": "590bf1d8-7c66-468e-982a-55a097dba006"
@@ -384,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "id": "feMzX1JfUYM7"
       },
@@ -467,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "metadata": {
         "id": "-ICqZZikUYM8"
       },
@@ -491,11 +491,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 144
+          "height": 147
         },
         "id": "5o0fJnXiUYM9",
         "outputId": "01e843d0-5049-488f-8d8c-5f3bcc2f93ad"
@@ -553,7 +553,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -585,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": null,
       "metadata": {
         "id": "cSB2gLmPUYM-"
       },
@@ -610,11 +610,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 489
+          "height": 490
         },
         "id": "TUpwLukrUYM-",
         "outputId": "a09cca9f-a140-4b23-e70c-aa1c80807d3c"
@@ -711,7 +711,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "metadata": {
         "id": "qJDNd9F3UYM_"
       },
@@ -732,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": null,
       "metadata": {
         "id": "prol6MweUYM_"
       },
@@ -754,7 +754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -800,7 +800,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -854,7 +854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -895,7 +895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -946,11 +946,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 489
+          "height": 490
         },
         "id": "3skhpCOSUYNK",
         "outputId": "ecdb0936-1a8f-4970-d7f0-a12d060d42c3"
@@ -1154,6 +1154,7 @@
       "cell_type": "markdown",
       "source": [
         "# Next Notebook\n",
+        "After defining all the components required for the empirical research process, we can create an automated workflow using basic loop constructs. The next notebook illustrates the use of these loop constructs.\n",
         "\n",
         "Follow this link for the next notebook tutorial:\n",
         "[AutoRA Basic Tutorial II: Loop Constructs](www.addlink.com) <br>"
